<resources>
    <string name="app_name">TaskR</string>
    <string name="title_activity_home" translatable="false">TaskR</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="status" translatable="false">Status</string>
    <string name="name">Name</string>
    <string name="members">Members</string>
    <string name="add_member">+ ADD MEMBERS</string>
    <string name="search">search</string>
    <string name="add_workitem">Save</string>
    <string name="team_detail">Team</string>
    <string name="assignee">Assignee</string>
    <string name="log_out">Sign out</string>
    <string name="menu_options">Options</string>
    <string name="sign_out">Sign out</string>
    <string name="R" translatable="false">R</string>
    <string name="Task" translatable="false">Task</string>
    <string name="Manage_your_work" translatable="false">Manage your work</string>
    <string name="ADD_MEMBER">+ ADD MEMBER</string>
    <string name="unstarted">UNSTARTED</string>
    <string name="started">STARTED</string>
    <string name="done">DONE</string>
    <string name="my_tasks">MY TASKS</string>
    <string name="edit_mode">Edit</string>
    <string name="save_changes">Save</string>

    <string-array name="item_status">
        <item>UNSTARTED</item>
        <item>STARTED</item>
        <item>DONE</item>
    </string-array>
    <string name="offline_mode">Offline mode</string>
    <string name="use_offline_mode">Continue offline as</string>
    <string name="phone_not_connected">Your phone is not connected to the internet</string>
    <string name="continue_as">Continue as</string>
    <string name="change_user">Change user</string>
    <string name="has_no_team">No team</string>
    <string name="shared_prefs" translatable="false">shared_prefs</string>
    <string name="prefs_last_user_id" translatable="false">prefs_last_user_id</string>
    <string name="prefs_last_team_sync_timestamp" translatable="false">prefs_last_team_sync_timestamp</string>
    <string name="prefs_last_user_sync_timestamp" translatable="false">prefs_last_user_sync_timestamp</string>
    <string name="prefs_last_workitem_sync_timestamp" translatable="false">prefs_last_workitem_sync_timestamp</string>
    <string name="prefs_auto_login" translatable="false">prefs_auto_login</string>
    <string name="workitems_synced">Work items synced</string>
    <string name="teams_synced">Teams synced</string>
    <string name="users_synced">Users synced</string>
    <string name="data_debug">Data debug</string>
    <string name="connection_error_bad_request">Connection error: Your request is bad</string>
    <string name="connection_error_unauthorized">Connection error: You shall not pass</string>
    <string name="connection_error_not_found">Connection error: Cant find resource</string>
    <string name="connection_error_server_error">Connection error: Something went wrong on the server</string>
    <string name="connection_error_no_response">Connection error: Can\'t connect to server</string>
    <string name="select_user">Select user</string>
    <string name="remove_team_member_dialog_title">Remove member</string>
    <string name="remove_team_member_dialog_message" formatted="false">Do you really want to remove %s from %s?</string>
    <string name="team_updated">Team updated</string>
    <string name="add_assignee">Assign user</string>
    <string name="work_item_updated">Work item updated</string>
    <string name="work_item">Work item</string>
    <string name="remove_assignee_dialog_title">Remove assignee</string>
    <string name="remove_assignee_dialog_message" formatted="false">Do you want to remove %s from %s?</string>
    <string name="delete_item">Delete item</string>
    <string name="remove_work_item_dialog_title">Delete work item</string>
    <string name="remove_work_item_dialog_message" formatted="false">Do you want to delete work item \"%s\"?</string>
    <string name="new_work_item">New work item</string>
    <string name="singning_in">Signing in</string>
    <string name="choose_team">Choose team</string>
    <string name="title_activity_team_list">TeamListActivity</string>
    <string name="join_team_dialog_title">Join team</string>
    <string name="join_team_dialog_message" formatted="false">Would you like to join %s?</string>
    <string name="new_team">New team</string>
    <string name="remove_team_dialog_title">Delete team</string>
    <string name="remove_team_dialog_message" formatted="false">Do you want to delete team %s?</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
</resources>
