<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="se.taskr.login.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Start picture"
            android:scaleType="centerCrop"
            android:src="@drawable/firstpagenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="74dp"
            android:layout_marginLeft="60dp"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/R"
            android:textSize="50dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="-12dp"
            android:layout_marginTop="74dp"
            android:text="@string/Task"
            android:textColor="@android:color/white"
            android:textSize="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:text="@string/Manage_your_work"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/offline_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:text="@string/phone_not_connected"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>


        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/change_user"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:text="@string/change_user"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="30dp"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="175dp"
            android:text="@string/use_offline_mode"
            android:visibility="invisible"
            android:clickable="true"
            android:id="@+id/continue_button" />

        <com.google.android.gms.common.SignInButton
           android:id="@+id/sign_in_button"
            android:layout_width="250dp"
            android:layout_marginTop="175dp"
            android:visibility="invisible"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>