<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="team"
            type="taskr.se.taskr.model.Team"/>
    </data>


    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="5dp"
            android:text="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="5dp"
            android:text="@{team.name}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/description" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="5dp"
            android:text="@{team.description}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/members" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_orange_light"
            android:background="@android:color/transparent"
            android:layout_marginStart="240dp"
            android:layout_marginTop="-18dp"
            android:text="@string/add_member" />


    </LinearLayout>
    </layout>