<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="editViewModel"
            type="taskr.se.taskr.teamdetailviews.detailviewmodel.TeamDetailEditViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLength="10"
            android:text="@={editViewModel.name}"
            app:error="@{editViewModel.nameError}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:text="@string/description"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:text="@={editViewModel.description}"
            app:error="@{editViewModel.descriptionError}"
            app:limiter="@{editViewModel.description}"/>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="@{() -> editViewModel.save()}"
            android:text="@string/save_changes"
            android:textColor="#FFF"
            android:textStyle="bold"/>


    </LinearLayout>

</layout>