<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="taskr.se.taskr.datadebug.DataDebugActivity">
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:text="@string/workitems_synced" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:textSize="22sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/debug_workitems_timestamp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:text="@string/users_synced" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:textSize="22sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/debug_users_timestamp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:text="@string/teams_synced" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:textSize="22sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/debug_teams_timestamp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#D3D3D3" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
